[package]
name = "orml-traits"
description = "Shared traits including `BasicCurrency`, `MultiCurrency`, `Auction` and more."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/traits"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1", default-features = false }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-io = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
sp-std = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"
frame-support = { git = "https://github.com/axia-tech/axlib", branch = "dev", default-features = false }
orml-utilities = { path = "../utilities", version = "0.4.1-dev", default-features = false }
xcm = { git = "https://github.com/axia-tech/axia", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
	"orml-utilities/std",
	"xcm/std",
]
