[package]
name = "orml-oracle-rpc"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"
license = "Apache-2.0"
description = "RPC module for orml-oracle."

[dependencies]
codec = { git = "https://github.com/axia-tech/axia-scale-codec", branch = "v2.3.1", package = "axia-scale-codec", version = "2.3.1" }
jsonrpc-core = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
jsonrpc-core-client = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
jsonrpc-derive = { git = "https://github.com/axia-tech/jsonrpc", branch = "master", version = "18.0.0" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

orml-oracle-rpc-runtime-api = { path = "runtime-api", version = "0.4.1-dev" }
